--- a/mysite/bboard/templates/bboard/index.html
+++ b/mysite/bboard/templates/bboard/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Головна</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    {% for b in bbs %}
-    <p>{{b.title}} - {{b.content}} - {{b.price}}</p>
+    <h1>Оголошення</h1>
+    <div>
+      <a href="/bboard/">Головна</a>
+      {% for rubric in rubrics %}
+      <a href="/bboard/{{rubric.pk}}">{{rubric.name}}</a>
+      {%endfor %}
+    </div>
+    {% for bb in bbs %}
+    <h2>{{ bb.title }}</h2>
+    <p>{{ bb.content }}</p>
+    <p><a href="/bboard/{{ bb.rubric.pk }}/">{{ bb.rubric.name }}</a></p>
+    <p>{{ bb.published}}</p>
     {% endfor %}
   </body>
 </html>
