--- a/mysite/bboard/templates/bboard/index.html
+++ b/mysite/bboard/templates/bboard/index.html
@@ -8,7 +8,7 @@
     <div>
       <a href="/bboard/">Головна</a>
       {% for rubric in rubrics %}
-      <a href="/bboard/{{rubric.pk}}">{{rubric.name}}</a>
+      <a href="{% url 'by_rubric' rubric.pk %}">{{rubric.name}}</a>
       {%endfor %}
     </div>
     {% for bb in bbs %}
