implement form for adding

--- a/mysite/bboard/templates/bboard/by_rubric.html
+++ b/mysite/bboard/templates/bboard/by_rubric.html
@@ -8,8 +8,9 @@
       <h2>Рубрика {{current_rubric.name}}</h2>
       <div>
          <a href="/bboard/">Головна</a>
+         <a href="{% url 'add' %}">Добавити</a>
          {% for rubric in rubrics %}
-         <a href="/bboard/{{rubric.pk}}">{{rubric.name}}</a>
+            <a href="/bboard/{{rubric.pk}}">{{rubric.name}}</a>
          {%endfor %}
       </div>
       {% for bb in bbs %}
