chage urls at templates

--- a/mysite/bboard/templates/bboard/by_rubric.html
+++ b/mysite/bboard/templates/bboard/by_rubric.html
@@ -7,7 +7,7 @@
       <h1>Оголошення</h1>
       <h2>Рубрика {{current_rubric.name}}</h2>
       <div>
-         <a href="/bboard/">Головна</a>
+         <a href="{% url 'index' %}">Головна</a>
          <a href="{% url 'add' %}">Добавити</a>
          {% for rubric in rubrics %}
             <a href="/bboard/{{rubric.pk}}">{{rubric.name}}</a>
