--- a/mysite/bboard/templates/bboard/create.html
+++ b/mysite/bboard/templates/bboard/create.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div>
-            <a href="/bboard/">Головна</a>
+            <a href="{% url 'index' %}">Головна</a>
             <a href="{% url 'add' %}">Добавити</a>
             {% for rubric in rubrics %}
                 <a href="{% url 'by_rubric' rubric.pk %}">{{rubric.name}}</a>
