implement template extend

--- a/mysite/bboard/templates/bboard/by_rubric.html
+++ b/mysite/bboard/templates/bboard/by_rubric.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <title>{{current_rubric.name}}:: Дошка оголошень</title>
-   </head>
-   <body>
-      <h1>Оголошення</h1>
-      <h2>Рубрика {{current_rubric.name}}</h2>
-      <div>
-         <a href="{% url 'index' %}">Головна</a>
-         <a href="{% url 'add' %}">Добавити</a>
-         {% for rubric in rubrics %}
-            <a href="/bboard/{{rubric.pk}}">{{rubric.name}}</a>
-         {%endfor %}
-      </div>
+{% extends 'layout/basic.html' %}
+
+{% block title %}{{current_rubric.name}}{% endblock %}
+
+
+      {% block content %}
+      <h2>рубрика: {{current_rubric.name}}</h2>
       {% for bb in bbs %}
       <div>
          <h2>{{bbs.title}}</h2>
@@ -20,6 +12,5 @@
          <p>{{bb.published}}</p>
       </div>
       {% endfor %}
-      </div>
-   </body>
-</html>
+      {% endblock %}
+
