--- a/mysite/bboard/templates/bboard/index.html
+++ b/mysite/bboard/templates/bboard/index.html
@@ -1,23 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Головна</title>
-  </head>
-  <body>
-    <h1>Оголошення</h1>
-    <div>
-      <a href="{% url 'index' %}">Головна</a>
-      <a href="{% url 'add' %}">Добавити</a>
-      {% for rubric in rubrics %}
-      <!-- <a href="/bboard/{{rubric.pk}}">{{rubric.name}}</a> -->
-        <a href="{% url 'by_rubric' rubric.pk %}">{{rubric.name}}</a>
-      {%endfor %}
-    </div>
-    {% for bb in bbs %}
-    <h2>{{ bb.title }}</h2>
-    <p>{{ bb.content }}</p>
-    <p><a href="/bboard/{{ bb.rubric.pk }}/">{{ bb.rubric.name }}</a></p>
-    <p>{{ bb.published}}</p>
-    {% endfor %}
-  </body>
-</html>
+{% extends 'layout/basic.html' %}
+				
+				
+{% block content %}
+{% for bb in bbs %}
+        
+<div>
+  <h2>{{ bb.title }}</h2>
+  <p>{{ bb.content }}</p>
+  <p>
+    <a href="{%  url 'by_rubric' bb.rubric.pk %}}">{{ bb.rubric.name }}</a>
+  </p>
+  <p>{{ bb.published}}</p>
+</div>
+        {% endfor %}
+{% endblock %}
