--- a/mysite/bboard/templates/layout/basic.html
+++ b/mysite/bboard/templates/layout/basic.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>
             {% block title %}{% endblock %}
         </title>
+        <link rel="stylesheet" type="text/css" href="{% static 'bboard/style.css' %}">
     </head>
     <body>
         <header>
@@ -18,7 +20,7 @@
         </nav>
         <section>
             {% block content %}
-                
+
             {% endblock %}
         </section>
     </body>
